<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskIshan">


    <TextView
        android:id="@+id/loginStatusTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        android:padding="16dp"
        android:text="@string/edit_profile"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editUser"
        android:layout_width="297dp"
        android:layout_height="49dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="12dp"
        android:hint="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tViewEditPicture" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginStart="55dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textGender">

        <RadioButton
            android:id="@+id/rButtonMale"
            android:layout_width="106dp"
            android:layout_height="match_parent"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rButtonFemale"
            android:layout_width="141dp"
            android:layout_height="match_parent"
            android:text="@string/female" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="136dp"
        android:layout_height="105dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/flwrpre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginStatusTextView" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="284dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="34dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tViewEditPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="9dp"
        android:text="@string/edit_picture_or_avatar"
        android:textColor="#5067E6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="249dp"
        android:layout_height="41dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoComplete" />

    <EditText
        android:id="@+id/textPass"
        android:layout_width="293dp"
        android:layout_height="44dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUser" />

    <TextView
        android:id="@+id/textGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="9dp"
        android:text="@string/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPass" />

    <TextView
        android:id="@+id/tVDateShow"
        android:layout_width="161dp"
        android:layout_height="34dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="14dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toStartOf="@+id/btnDatePick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/btnDatePick"
        android:layout_width="110dp"
        android:layout_height="39dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="53dp"
        android:background="#7A1313"
        android:text="@string/choose_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tVDateShow"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <AutoCompleteTextView
        android:id="@+id/autoComplete"
        android:layout_width="257dp"
        android:layout_height="43dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="15dp"
        android:text="Select Province"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDatePick" />

</androidx.constraintlayout.widget.ConstraintLayout>